--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -19,7 +19,7 @@
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
-    <form action="/member/auth/login" th:action th:object="${member}" method="post">
+    <form action="" th:action th:object="${member}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
@@ -27,15 +27,13 @@
 
         <div>
             <label for="email">로그인 Email</label>
-            <input type="text" id="email" th:field="*{email}" class="form-control" th:errorclass="field-error">
+            <input type="text" id="email" name="email" th:field="*{email}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{email}"></div>
         </div>
 
         <div>
             <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}"
-                   class="form-control"
-                   th:errorclass="field-error">
+            <input type="password" id="password" name="password" th:field="*{password}" class="form-control" th:errorclass="field-error">
             <div class="field-error" th:errors="*{password}"></div>
         </div>
         <hr class="my-4">
