--- a/src/main/resources/templates/login/signForm.html
+++ b/src/main/resources/templates/login/signForm.html
@@ -22,8 +22,7 @@
     <h4 class="mb-3">회원 정보 입력</h4>
     <form action="" th:action th:object="${member}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-               th:text="${err}">전체 오류 메시지</p>
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
         <div>
