--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -16,7 +16,7 @@
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg" type="button"
                     th:onclick="|location.href='@{/api/member/loginHome}'|">
-                상품 관리
+                로그인 전용 페이지
             </button>
         </div>
         <div class="col">
