--- a/src/main/resources/templates/restaurant/detail.html
+++ b/src/main/resources/templates/restaurant/detail.html
@@ -24,6 +24,22 @@
            value="1" th:value="${item.id}" readonly>
   </div>
 
+  <div>
+    <label for="itemName">이름</label>
+    <input type="text" id="itemName" name="itemName" class="form-control"
+           value="상품A" th:value="${item.restaurant_basic.getName()}" readonly>
+  </div>
+  <div>
+    <label for="price">분류</label>
+    <input type="text" id="price" name="price" class="form-control"
+           value="10000"  th:value="${item.restaurant_basic.getCategory()}" readonly>
+  </div>
+  <div>
+    <label for="quantity">홈페이지</label>
+    <input type="text" id="quantity" name="quantity" class="form-control"
+           value="10"  th:value="${item.getRestaurant_detail().getHomepage()}" readonly>
+  </div>
+
 
 
   <hr class="my-4">
