--- a/src/main/resources/templates/restaurant/detail.html
+++ b/src/main/resources/templates/restaurant/detail.html
@@ -55,7 +55,7 @@
       <button class="w-100 btn btn-secondary btn-lg"
               onclick="location.href='items.html'"
 
-              th:onclick="|location.href='@{/basic/items}'|"
+              th:onclick="|location.href='@{/food}'|"
               type="button">목록으로</button>
     </div>
   </div>
