--- a/src/main/resources/templates/menuBar.html
+++ b/src/main/resources/templates/menuBar.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">부산 풀 코스 </a>
+    <a class="navbar-brand" href="/">부산 풀 코스</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+        <ul class="navbar-nav ">
             <li class="nav-item">
                 <a class="nav-link" href="/food">식당List 보기</a>
             </li>
@@ -15,29 +15,25 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">리뷰List 보기</a>
             </li>
-
-
+        </ul>
+        <ul class="navbar-nav">
             <!-- 비로그인 상태 -->
             <li th:if="${not isLoggedIn}">
-                <a class="nav-link" href="/member/auth/signup">회원가입</a>
+                <a class="nav-link ml-auto" href="/member/auth/signup">회원가입</a>
             </li>
             <li th:if="${not isLoggedIn}">
-                <a class="nav-link" href="/member/auth/login">로그인</a>
+                <a class="nav-link ml-auto" href="/member/auth/login">로그인</a>
             </li>
 
             <!-- 로그인 상태 -->
             <li th:if="${isLoggedIn}">
-                <a class="nav-link" href="#">
+                <a class="nav-link ml-auto" href="#">
                     <img th:src="${userImage}" alt="회원 이미지">
                 </a>
             </li>
             <li th:if="${isLoggedIn}">
-                <a class="nav-link" href="/member/logout">로그아웃</a>
+                <a class="nav-link ml-auto" href="/member/logout">로그아웃</a>
             </li>
-
-
-
-
         </ul>
     </div>
 </nav>
