<feat> ; footer 추가

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<footer th:fragment="copy">
-    푸터 자리 입니다.
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p>블로그 주소: <a href="https://velog.io/@jobmania">블로그</a></p>
+            </div>
+            <div class="col-md-6">
+                <p>깃헙 주소: <a href="https://github.com/jobmania">깃헙</a></p>
+            </div>
+        </div>
+    </div>
 </footer>
-<!--<footer th:fragment="copyParam (param1, param2)">-->
-<!--    <p>파라미터 자리 입니다.</p>-->
-<!--    <p th:text="${param1}"></p>-->
-<!--    <p th:text="${param2}"></p>-->
-<!--</footer>-->
-</body>
-</html>
