--- a/src/main/resources/templates/restaurant/list.html
+++ b/src/main/resources/templates/restaurant/list.html
@@ -25,10 +25,23 @@
     </span>
         <span class="btn_img select">
         <select id="search_target" name="search_target">
-            <option value="name" th:selected="${param.search_target == 'name'}" >식당명</option>
+            <option value="name" th:selected="${param.search_target == 'name'}">식당명</option>
             <option value="address" th:selected="${param.search_target == 'address'}">주소</option>
         </select>
     </span>
+
+        <label for="sort">정렬</label>
+        <select id="sort" name="sort">
+            <option value="id" th:selected="${param.sort == 'id'}">ID</option>
+            <option value="name" th:selected="${param.sort == 'name'}">이름</option>
+            <option value="category" th:selected="${param.sort == 'category'}">종류</option>
+            <option value="address" th:selected="${param.sort == 'address'}">주소</option>
+        </select>
+        <label for="asc">순서</label>
+        <select id="asc" name="asc">
+            <option value="true" th:selected="${param.asc == 'true'}">오래된순</option>
+            <option value="false" th:selected="${param.asc == 'false'}">최신순</option>
+        </select>
         <button type="submit" class="ico_16px search">Search</button>
     </form>
 
@@ -57,16 +70,16 @@
 
         <ul class="pagination">
             <li th:class="${list.number == 0} ? 'page-item disabled' : 'page-item'">
-                <a th:if="${list.number != 0}" th:href="@{/food(page=${list.number - 1},search_keyword=${param.search_keyword},search_target=${param.search_target})}" class="page-link">Previous</a>
+                <a th:if="${list.number != 0}" th:href="@{/food(page=${list.number - 1},search_keyword=${param.search_keyword},search_target=${param.search_target},sort=${param.sort},asc=${param.asc})}" class="page-link">Previous</a>
 <!--                 첫번째 일경우 a 태그 비활성화 및 이름만 표시 -->
                 <span th:unless="${list.number != 0}" class="page-link">Previous</span>
             </li>
             <li th:each="pageNumber : ${#numbers.sequence(list.number - 5, list.number + 4)}"
                 th:class="${pageNumber == list.number} ? 'page-item active' : 'page-item'">
-                <a th:if="${pageNumber >= 0 && pageNumber < list.totalPages}" th:href="@{/food(page=${pageNumber},search_keyword=${param.search_keyword},search_target=${param.search_target})}" class="page-link" th:text="${pageNumber + 1}"></a>
+                <a th:if="${pageNumber >= 0 && pageNumber < list.totalPages}" th:href="@{/food(page=${pageNumber},search_keyword=${param.search_keyword},search_target=${param.search_target},sort=${param.sort},asc=${param.asc})}" class="page-link" th:text="${pageNumber + 1}"></a>
             </li>
             <li th:class="${list.number == list.totalPages - 1} ? 'page-item disabled' : 'page-item'">
-                <a th:if="${list.number != list.totalPages - 1}" th:href="@{/food(page=${list.number + 1},search_keyword=${param.search_keyword},search_target=${param.search_target})}" class="page-link">Next</a>
+                <a th:if="${list.number != list.totalPages - 1}" th:href="@{/food(page=${list.number + 1},search_keyword=${param.search_keyword},search_target=${param.search_target},sort=${param.sort},asc=${param.asc})}" class="page-link">Next</a>
                 <span th:unless="${list.number != list.totalPages - 1}" class="page-link">Next</span>
             </li>
         </ul>
@@ -87,6 +100,29 @@
         } else if (searchTarget === 'address') {
             document.getElementById('search_target').value = 'address';
         }
+
+        var sort = new URLSearchParams(window.location.search).get('sort');
+
+        if (sort === 'id') {
+            document.getElementById('sort').value = 'id';
+        } else if (sort === 'name') {
+            document.getElementById('sort').value = 'name';
+        } else if (sort === 'category') {
+            document.getElementById('sort').value = 'category';
+        } else if (sort === 'address') {
+            document.getElementById('sort').value = 'address';
+        }
+
+
+        var asc = new URLSearchParams(window.location.search).get('asc');
+
+        if (asc === 'true') {
+            document.getElementById('asc').value = 'true';
+        } else if (asc === 'false') {
+            document.getElementById('asc').value = 'false';
+        }
+
+
     });
 </script>
 </html>
