--- a/src/main/resources/templates/menuBar.html
+++ b/src/main/resources/templates/menuBar.html
@@ -15,6 +15,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">리뷰List 보기</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/map">맛집 찾아보기</a>
+            </li>
+
+
+
         </ul>
         <ul class="navbar-nav">
             <!-- 비로그인 상태 -->
