--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/js/bootstrap.min.js}"
+            href="js/bootstrap.min.js" rel="script">
 </head>
 <body>
 <div class="container" style="max-width: 800px">
@@ -16,6 +18,9 @@
     <hr class="my-4">
     <div th:replace="/footer.html"></div>
 </div>
+
+
+
 </body>
 
 </html>
