--- a/src/main/resources/templates/menuBar.html
+++ b/src/main/resources/templates/menuBar.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-        <ul class="navbar-nav ">
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/food">식당List 보기</a>
             </li>
@@ -18,10 +18,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="/map">맛집 찾아보기</a>
             </li>
-
-
-
         </ul>
+
         <ul class="navbar-nav">
             <!-- 비로그인 상태 -->
             <li th:if="${not isLoggedIn}">
@@ -31,10 +29,11 @@
                 <a class="nav-link ml-auto" href="/member/auth/login">로그인</a>
             </li>
 
+
             <!-- 로그인 상태 -->
-            <li th:if="${isLoggedIn}">
-                <a class="nav-link ml-auto" href="#">
-                    <img th:src="${userImage}" alt="회원 이미지">
+            <li th:if="${isLoggedIn}" class="nav-item dropdown">
+                <a class="nav-link ml-auto" href="/member" >
+                    <img src="/img/user.png" alt="회원 이미지" style="width: 20px; height: 20px;">
                 </a>
             </li>
             <li th:if="${isLoggedIn}">
