<feat> :  map 출력시 제한 ( 1000m 제한 설정 )
- 출력 제한은 최대 10,20,30개 선택 가능하게
- 출력 order는 거리순으로 최대한 가까운 순으로

--- a/src/main/resources/templates/kakaomap/map.html
+++ b/src/main/resources/templates/kakaomap/map.html
@@ -31,7 +31,8 @@
 
     <form id="location-form" onsubmit="submitForm(event)">
         <label for="distance">거리 (m):</label>
-        <input type="text" id="distance" name="distance" required>
+        <input type="text" id="distance" name="distance" required th:field="${mapRequest.distance}" th:errorclass="field-error">
+        <div class="field-error" th:errors="${mapRequest.distance}"></div>
         <br>
         <button type="submit">내 주변 맛집을 보자</button>
     </form>
