<feat> :  Boolean Converter 적용 완료

--- a/src/main/resources/templates/kakaomap/map.html
+++ b/src/main/resources/templates/kakaomap/map.html
@@ -13,6 +13,16 @@
 
 
 
+    <style>
+        .container {
+            max-width: 560px;
+        }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
+
 </head>
 <body>
 <div class="container" style="max-width: 800px">
