--- a/src/main/resources/templates/kakaomap/resultMap.html
+++ b/src/main/resources/templates/kakaomap/resultMap.html
@@ -12,7 +12,15 @@
     <title>Geolocation example - watchPosition()</title>
 
 
-
+    <style>
+        .container {
+            max-width: 560px;
+        }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
 <div class="container" style="max-width: 800px">
