<feat> :  multipart 타입 파일 업로드 성공, db에 upload 파일명  저장
- 이미지 저장소에는 랜덤 값
- db에서는 upload시 이름값 
- 파일 경로 생성해야함.

--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -13,6 +13,26 @@
 
 
 
+  <div>
+    <li>" <span th:text="${member.getNickName()}"></span>" 은 너의 이름이다 반갑다!</li>
+
+
+    <form action="/upload" method="post" enctype="multipart/form-data">
+      <ul>
+        <li>프로필 사진 업로드<input type="file" name="file" ></li>
+      </ul>
+      <input type="submit"/>
+    </form>
+
+
+
+    소개글
+  </div>
+
+  <div>
+    북마크 목록
+
+  </div>
 
 
 
