--- a/src/main/resources/templates/menuBar.html
+++ b/src/main/resources/templates/menuBar.html
@@ -32,7 +32,7 @@
 
             <!-- 로그인 상태 -->
             <li th:if="${isLoggedIn}" class="nav-item dropdown">
-                <a class="nav-link ml-auto" href="/member" >
+                <a class="nav-link ml-auto" href="/member/profile" >
                     <img src="/img/user.png" alt="회원 이미지" style="width: 20px; height: 20px;">
                 </a>
             </li>
